;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-2.2.4:
  * slightly incompatible change: SB-EXT:*DERIVE-FUNCTION-TYPES* being NIL now
    means that function calls will strictly only use type information from
    proclaimed ftypes. The previous behavior (still the default) of using
    derived type information from the same file is specified with :SAME-FILE.
  * optimization: fasl files are now usually smaller (up to 10% on default
    policy) and may load faster, especially on high debug.
  * enhancement: debug source locations now work correctly for top level forms
    with policy DEBUG = 1, as well as for block compiled files.
  * bug fix: coverage instrumentation behaves correctly with respect to
    non-local exits.
  * bug fix: ftype proclamations now take effect immediately during block
    compilation.
  * bug fix: block compilation of top-level closures now work.

changes in sbcl-2.2.4 relative to sbcl-2.2.3:
  * enhancement: better constraint propagation in the compiler. Specifically,
    the compiler can now derive the type of X in control flow join situations
    such as
    (LAMBDA (X) (ECASE (1 ...) (2 ...)) X)
    or
    (LAMBDA (X) (ETYPECASE (INTEGER ...) (SYMBOL ...)) X)
    instead of forgetting all information about X after the E(TYPE)CASE.
  * optimization: inlined functions enclosed in local macro definitions no
    longer save their entire lexical environment, reducing unnecessary
    memory retention.
  * optimization: faster (< integer fixnum) comparisons (ARM64 and x86-64).
  * platform support:
    ** RUN-PROGRAM is faster on Linux and FreeBSD if close_range(2) is
       available.
  * bug fix: block compilation now interacts more correctly with the creation
    of new packages.
  * bug fix: internal compiler error in array reference
    optimizer. (lp#1966624)

changes in sbcl-2.2.3 relative to sbcl-2.2.2:
  * minor incompatible change: SB-THREAD:MUTEX-OWNER may return :THREAD-DEAD