@@ -429,3 +429,14 @@
             (test (make-unspecific nil t)   "foo/")
             (test (make-unspecific t   nil) "foo/")
             (test (make-unspecific t   t)   "foo/")))
+
+(with-test (:name (rename-file :overwrite))
+  (with-test-directory ()
+    (with-open-file (s "a" :direction :output)
+      (write-line "a" s))
+    (with-open-file (s "b" :direction :output)
+      (write-line "b" s))
+    (rename-file "a" "b")
+    (assert (null (probe-file "a")))
+    (with-open-file (s "b")
+      (assert (equal "a" (read-line s))))))
