@@ -5,6 +5,8 @@ changes relative to sbcl-2.2.4:
     means that function calls will strictly only use type information from
     proclaimed ftypes. The previous behavior (still the default) of using
     derived type information from the same file is specified with :SAME-FILE.
+  * minor incompatible change: RENAME-FILE now overwrites the target file on
+    Windows too, making its behaviour consistent with other platforms.
   * optimization: fasl files are now usually smaller (up to 10% on default
     policy) and may load faster, especially on high debug.
   * enhancement: debug source locations now work correctly for top level forms
